# worktree-guardian

./: .gitignore  README.md  check_abandoned.sh  cleanup_bot.py  discord_reporter.py  index.html  pyproject.toml  worktree_guardian.py  worktree_guardian_v2.py  worktrees.json
.github/workflows/: pages.yml
wtree_guardian/: __init__.py  __main__.py  cli.py  discord_notify.py  git_ops.py  models.py  rich_tui.py  tui.py
