[project]
name = "wtree-guardian"
version = "2.0.0"
description = "Git worktree monitoring with TUI"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "textual>=0.1.0",
]

[project.scripts]
wtree = "wtree_guardian.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["wtree_guardian"]
